--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "firebase-auth": "^0.1.2",
+    "framer-motion": "^12.23.24",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
